dist-iter/tests/compile_fail_tests/task_macro_wrong_args/map_missing_chunk_size.stderr
error: no rules expected the token `|`
 --> tests/compile_fail_tests/task_macro_wrong_args/map_missing_chunk_size.rs:6:29
  |
6 |         .dist_map(map_task!(|x: u32| -> u32 { x + 1 }));
  |                             ^ no rules expected this token in macro call
  |
note: while trying to match `CHUNK_SIZE`
 --> src/task.rs
  |
  |     (CHUNK_SIZE = $IN:literal, |$closure_param:ident: $in:ty| -> $out:ty $closure_block:block) => {{
  |      ^^^^^^^^^^
